# llm-card-fraud-detection

./: README.md  chroma.py  main.py  pyproject.toml
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: card_fraud_detection.baml  test.baml
baml_src/tests/: generic_test.baml  high_velocity_card_txn.baml  low_txn_amount.baml  total_exposure_3000.baml
rag/: card_fraud_rules.jsonl  chroma.py
rag_example/: document_retreiver.py  main.py
